--- a/wedding-rsvp/about-us.html
+++ b/wedding-rsvp/about-us.html
@@ -10,6 +10,15 @@
     <header>
         <h1>About Us</h1>
     </header>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="event-details.html">Event Details</a></li>
+            <li><a href="rsvp.html">RSVP</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="privacy.html">Privacy Policy</a></li>
+        </ul>
+    </nav>
     <section>
         <p>Welcome to Wedding RSVP, your trusted partner in managing wedding invitations and guest responses. Our mission is to make your special day stress-free by providing a seamless RSVP experience for you and your guests.</p>
     </section>
