--- a/wedding-rsvp/contact.html
+++ b/wedding-rsvp/contact.html
@@ -10,6 +10,15 @@
     <header>
         <h1>Contact Us</h1>
     </header>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="event-details.html">Event Details</a></li>
+            <li><a href="rsvp.html">RSVP</a></li>
+            <li><a href="about-us.html">About Us</a></li>
+            <li><a href="privacy.html">Privacy Policy</a></li>
+        </ul>
+    </nav>
     <section>
         <p>If you have any questions, feel free to reach out to us:</p>
         <ul>
