--- a/wedding-rsvp/event-details.html
+++ b/wedding-rsvp/event-details.html
@@ -10,6 +10,15 @@
     <header>
         <h1>Event Details</h1>
     </header>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="rsvp.html">RSVP</a></li>
+            <li><a href="about-us.html">About Us</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="privacy.html">Privacy Policy</a></li>
+        </ul>
+    </nav>
     <section>
         <p>Date: Friday, May 23, 2025</p>
         <p>Location: הלורנס, הצורפים 18, Tel Aviv-Yafo, Israel</p>
