--- a/wedding-rsvp/rsvp.html
+++ b/wedding-rsvp/rsvp.html
@@ -10,6 +10,15 @@
     <header>
         <h1>RSVP</h1>
     </header>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="event-details.html">Event Details</a></li>
+            <li><a href="about-us.html">About Us</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="privacy.html">Privacy Policy</a></li>
+        </ul>
+    </nav>
     <section>
         <form id="rsvp" action="#" method="post">
             <label for="name">Your Name:</label>
