further small improvements

--- a/wedding-rsvp/index.html
+++ b/wedding-rsvp/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>You're Invited to Our Wedding!</h1>
         <p>Join us for a day filled with love and celebration.</p>
-        <img src="images/wedding-art.png" alt="Wedding Art" style="width: 100%; max-width: 600px; margin: 20px auto; display: block;">
+        <img src="images/wed.webp" alt="Wedding Art" style="width: 100%; max-width: 600px; margin: 20px auto; display: block;">
     </header>
     
     <nav>
